[package]
name = "async-blocking-bridger"
version = "0.1.0"
edition = "2021"
description = "A way to write a blocking client and async client without repeating yourself"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
